# slab-firmware

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix
.github/workflows/: build.yml  firmware.yml
demo/: CMakeLists.txt  keymap.c  main.c
hackpad/: CMakeLists.txt  keymap.c  keymap.h  main.c
left/: CMakeLists.txt  keymap.c  main.c
right/: CMakeLists.txt  keymap.c  keymap.h  main.c
shared/: slab.h
shared/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
shared/communication/: CMakeLists.txt  communication.c  communication.h
shared/display/: CMakeLists.txt  display.c  display.h
shared/rgbleds/: CMakeLists.txt  rgbleds.c  rgbleds.h
shared/slider/: CMakeLists.txt  slider.c  slider.h
shared/tinyusb/: CMakeLists.txt  tinyusb_openrgb.c  tinyusb_squirrel.c  tinyusb_squirrel.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
src/: keymap.c  keymap.h  main.c
test-board/: CMakeLists.txt  keymap.c  main.c
